# iti-idk-weighting

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  Singularity.def  pyproject.toml  reproduce_results.sh  requirements.txt  research_plan.md  results_analysis.ipynb  test.ipynb  utils.py
dataset_utils/: binary_sample_generator.py  binary_sample_loader.py  const.py  dataset_analyzer.py  dataset_generator.py  idk_rephraser.py  load_dataset.py  make_truthfulqa_subset.py  path_utils.py
datasets/: TruthfulQA_true_and_idk_rephrased.csv  TruthfulQA_true_and_idk_rephrased_rephrasing_log.csv  subset_eval_100.csv  subset_stats.json
datasets/binary_samples/: binary_samples_c0_original.csv  binary_samples_c1_true_only.csv  binary_samples_c2_rephrased_idk.csv  binary_samples_c3_oversampled_idk.csv
get_activations/: get_activations.py  get_activations.sh
validation/: edit_weight.py  evaluate_with_llama_judges.py  push_hf.py  validate_2fold.py
validation/results_dump/answer_dump/: llama3_8B_instruct_seed_42_top_48_heads_alpha_15_fold_0_beta_0.0_com.csv  llama3_8B_instruct_seed_42_top_48_heads_alpha_15_fold_0_beta_10.0_com.csv  llama3_8B_instruct_seed_42_top_48_heads_alpha_15_fold_0_beta_2.0_com.csv  llama3_8B_instruct_seed_42_top_48_heads_alpha_15_fold_0_beta_5.0_com.csv  llama3_8B_instruct_seed_42_top_48_heads_alpha_15_fold_0_com.csv  llama3_8B_instruct_seed_42_top_48_heads_alpha_15_fold_1_beta_0.0_com.csv  llama3_8B_instruct_seed_42_top_48_heads_alpha_15_fold_1_beta_10.0_com.csv  llama3_8B_instruct_seed_42_top_48_heads_alpha_15_fold_1_beta_2.0_com.csv  llama3_8B_instruct_seed_42_top_48_heads_alpha_15_fold_1_beta_5.0_com.csv  llama3_8B_instruct_seed_42_top_48_heads_alpha_15_fold_1_com.csv
validation/results_dump/assesed_dump/: llama3_8B_instruct_seed_42_top_48_heads_alpha_15_fold_0_beta_0.0_com.csv  llama3_8B_instruct_seed_42_top_48_heads_alpha_15_fold_0_beta_10.0_com.csv  llama3_8B_instruct_seed_42_top_48_heads_alpha_15_fold_0_beta_2.0_com.csv  llama3_8B_instruct_seed_42_top_48_heads_alpha_15_fold_0_beta_5.0_com.csv  llama3_8B_instruct_seed_42_top_48_heads_alpha_15_fold_0_com.csv  llama3_8B_instruct_seed_42_top_48_heads_alpha_15_fold_1_beta_0.0_com.csv  llama3_8B_instruct_seed_42_top_48_heads_alpha_15_fold_1_beta_10.0_com.csv  llama3_8B_instruct_seed_42_top_48_heads_alpha_15_fold_1_beta_2.0_com.csv  llama3_8B_instruct_seed_42_top_48_heads_alpha_15_fold_1_beta_5.0_com.csv  llama3_8B_instruct_seed_42_top_48_heads_alpha_15_fold_1_com.csv
validation/results_dump/summary_dump/: llama3_8B_instruct_seed_42_top_48_heads_alpha_15_fold_0_beta_0.0_com_true_info.csv  llama3_8B_instruct_seed_42_top_48_heads_alpha_15_fold_0_beta_10.0_com.csv  llama3_8B_instruct_seed_42_top_48_heads_alpha_15_fold_0_beta_10.0_com_true_info.csv  llama3_8B_instruct_seed_42_top_48_heads_alpha_15_fold_0_beta_2.0_com.csv  llama3_8B_instruct_seed_42_top_48_heads_alpha_15_fold_0_beta_2.0_com_true_info.csv  llama3_8B_instruct_seed_42_top_48_heads_alpha_15_fold_0_beta_5.0_com_true_info.csv  (+8 more)
