[project]
name = "honest-llama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absl-py==2.3.1",
    "accelerate==1.10.1",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "attrs==25.3.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "datasets==4.1.1",
    "dill==0.4.0",
    "einops==0.8.1",
    "evaluate==0.4.6",
    "filelock==3.19.1",
    "fire==0.7.1",
    "fonttools==4.60.0",
    "frozenlist==1.7.0",
    "fsspec==2025.9.0",
    "hf-xet==1.1.10",
    "huggingface-hub==0.35.0",
    "idna==3.10",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "kiwisolver==1.4.9",
    "llvmlite==0.45.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.6",
    "mpmath==1.3.0",
    "multidict==6.6.4",
    "multiprocess==0.70.16",
    "networkx==3.5",
    "nltk==3.9.1",
    "numba==0.62.0",
    "numpy==2.3.3",
    "packaging==25.0",
    "pandas==2.3.2",
    "pillow==11.3.0",
    "propcache==0.3.2",
    "psutil==7.1.0",
    "pyarrow==21.0.0",
    "pynndescent==0.5.13",
    "pyparsing==3.2.4",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "regex==2025.9.18",
    "requests==2.32.5",
    "rouge-score==0.1.2",
    "safetensors==0.6.2",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
    "seaborn==0.13.2",
    "sentencepiece==0.2.1",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "termcolor==3.1.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.0",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "tqdm==4.67.1",
    "transformers==4.56.1",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "umap-learn==0.5.9.post2",
    "urllib3==2.5.0",
    "xxhash==3.5.0",
    "yarl==1.20.1",
]
