[project]
name = "honest-llama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "evaluate>=0.4.6",
    "kaleido>=1.1.0",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "numpy>=2.3.3",
    "openai>=1.108.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pyvene>=0.1.8",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.2",
    "truthfulqa",
]

[tool.uv.sources]
truthfulqa = { git = "https://github.com/jfpio/TruthfulQA" }
